--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
 					<li><a href="#" class="header-btn">Бесплатное занятие</a></li>
 				</ul>
 			</div>
+			<div class="mobile-btn">
+				<div class="mobile-btn-el"></div>
+			</div>
+			<div class="mobile-menu">
+				<div class="close-btn"></div>
+				<a href="index.html" class="header-logo"><img src="i/logo.png"></a>
+				<div class="header-nav">
+					<ul>
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Дисциплины</a></li>
+						<li><a href="#">Цены</a></li>
+						<li><a href="#">Акции</a></li>
+						<li><a href="#">Отзывы</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Информация</a></li>
+						<li><a href="#">Контакты</a></li>
+						<li><a href="#" class="header-btn">Бесплатное занятие</a></li>
+					</ul>
+				</div>
+				<div class="header-city">Томск</div>
+				<ul class="header-social">
+					<li><a href="#" target="_blank"><img src="i/social-ico-1.svg"></a></li>
+					<li><a href="#" target="_blank"><img src="i/social-ico-1.svg"></a></li>
+					<li><a href="#" target="_blank"><img src="i/social-ico-2.svg"></a></li>
+				</ul>
+				<a href="tel: 89230000000" class="header-phone">8 (923) 000-00-00</a>
+			</div>
 		</div>
 	</div>
 
