--- a/disciplines.html
+++ b/disciplines.html
@@ -13,14 +13,14 @@
 	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css">
 	<link rel="stylesheet" href="css/slick.css" type="text/css">
 	<link rel="stylesheet" href="css/layout.css" type="text/css">
-	<link rel="stylesheet" href="css/index.css" type="text/css">
+	<link rel="stylesheet" href="css/disciplines.css" type="text/css">
 
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.fancybox.js"></script>
 	<script type="text/javascript" src="js/jquery.inputmask.bundle.js"></script>
 	<script type="text/javascript" src="js/slick.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="js/disciplines.js"></script>
 
 </head>
 <body>
@@ -46,7 +46,7 @@
 					<li class="li-drop">
 						<a href="disciplines.html">Дисциплины</a>
 						<div class="nav-drop">
-							<div class="drop-item"><a href="#"><nobr>Джиу Джитсу</nobr></a></div>
+							<div class="drop-item"><a href="#">Джиу Джитсу</a></div>
 							<div class="drop-item"><a href="#">Кудо</a></div>
 						</div>
 					</li>
@@ -119,65 +119,11 @@
 		</div>
 	</div>
 
-	<div class="b b-1">
-		<div class="b-block">
-			<h1>Запишите ребенка в детскую школу единоборств</h1>
-			<p>с профессиональным уклоном<br> обучения детей от 3 до 6 лет</p>
-			<a href="#" class="b-1-btn">Записаться на бесплатное занятие</a>
-		</div>
-	</div>
-
-	<div class="b b-2">
-		<div class="b-block">
-			<div class="b-2-left">
-				<h2 class="title">Наша миссия</h2>
-				<div class="left-text">Развивать в детях правильные ценности и качества, которые помогут построить им успешную жизнь.</div>
-			</div>
-			<div class="b-2-right">Возрастной период, между 3 и 6 годами, характерезуется активным умственным и физическим развитием. Дети от 3 до 6 лет наиболее гибкие в развитии физических и умственных способностей. Мы учитываем это факт при  построении тренировочного занятия, подбирая упражения так, чтобы ребенок учился вовремя переключаться от веселой игры, к задачам, требующим внимательности и терпения.</div>
-		</div>
-	</div>
-
-	<div class="b b-3 line">
-		<div class="b-block">
-			<h2 class="title">ищете секцию для ребенка?</h2>
-			<div class="subtitle">3 аргумента в пользу единоборств</div>
-		</div>
-		<ul class="b-3-list">
-			<li>
-				<div class="b-block">
-					<div class="b-3-list-wrap">
-						<div class="li-title">Формирование фундамента</div>
-						<img src="i/b-3-img-1.jpg" class="abs-img">
-						<p>Мы занимаемся созданием прочного фундамента физической подготовленности и освоеним основных двигательных умений. Используем обширный комплекс акробатических, гимнастических и общеразвивающих упражнений. Применяем специально подводящие упражнения, характерные избранному виду спорта. Активно используется игровой метод, позволяющий изучить азы единоборства. Такой обширный перечень средств позволяет нам гармонично развивать ребёнка, в соответствии с его возрастными особенностями, а так же делает занятия разнообразными, яркими и интересными для детей, что формирует у детей мотивацию к тренировкам.</p>
-					</div>
-				</div>
-			</li>
-			<li>
-				<div class="b-block">
-					<div class="b-3-list-wrap">
-						<div class="li-title">С успехом по жизни</div>
-						<img src="i/b-3-img-2.jpg" class="abs-img">
-						<p>По статистике, большинство учеников, кто тренировался с нами с дошкольного возраста, имеют в среднем на 70% выше результаты, чем их сверстники, в любом виде спорта. Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст</p>
-					</div>
-				</div>
-			</li>
-			<li>
-				<div class="b-block">
-					<div class="b-3-list-wrap">
-						<div class="li-title">Воспитание человеческих качеств</div>
-						<img src="i/b-3-img-3.jpg" class="abs-img">
-						<p>По статистике, большинство учеников, кто тренировался с нами с дошкольного возраста, имеют в среднем на 70% выше результаты, чем их сверстники, в любом виде спорта. Текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст текст</p>
-					</div>
-				</div>
-			</li>
-		</ul>
-	</div>
-
-	<div class="b b-4 line">
+	<div class="b b-1 line">
 		<div class="b-block">
 			<h2 class="title">Выберите направление</h2>
 			<p class="subtitle">каждое имеет свои особенности</p>
-			<ul class="b-4-list">
+			<ul class="b-1-list">
 				<li>
 					<div class="li-wrap">
 						<div class="name">Джиу-Джитсу</div>
@@ -204,11 +150,11 @@
 		</div>
 	</div>
 
-	<div class="b b-5 line">
+	<div class="b b-2 line">
 		<div class="b-block">
 			<h2 class="title">Хотите убедиться в качестве тренировок?</h2>
 			<p class="subtitle">Запишитесь на пробное занятие</p>
-			<div class="b-5-wrap clearfix">
+			<div class="b-2-wrap clearfix">
 				<div class="item"><img src="i/b-5-1.png"><span>Тренировка<br> в действующей группе</span></div>
 				<div class="item"><img src="i/b-5-2.png"><span>Длительностью<br> 55 минут</span></div>
 				<form>
@@ -243,28 +189,28 @@
 		</div>
 	</div>
 
-	<div class="b b-6 line">
+	<div class="b b-3 line">
 		<div class="b-block">
 			<h2 class="title">tiger kids - что из себя представляет школа?</h2>
 			<p class="subtitle">Школа единоборств для детей в Томске</p>
-			<div class="b-6-slider clearfix">
-				<div class="b-6-slide">
+			<div class="b-3-slider clearfix">
+				<div class="b-3-slide">
 					<a href="i/b-3-img-3.jpg" data-fancybox="group-1" class="fancybox"><img src="i/b-3-img-3.jpg"></a>
 				</div>
-				<div class="b-6-slide">
+				<div class="b-3-slide">
 					<a href="i/b-3-img-3.jpg" data-fancybox="group-1" class="fancybox"><img src="i/b-3-img-3.jpg"></a>
 				</div>
-				<div class="b-6-slide">
+				<div class="b-3-slide">
 					<a href="i/b-3-img-3.jpg" data-fancybox="group-1" class="fancybox"><img src="i/b-3-img-3.jpg"></a>
 				</div>
-				<div class="b-6-slide">
+				<div class="b-3-slide">
 					<a href="i/b-3-img-3.jpg" data-fancybox="group-1" class="fancybox"><img src="i/b-3-img-3.jpg"></a>
 				</div>
-				<div class="b-6-slide">
+				<div class="b-3-slide">
 					<a href="i/b-3-img-3.jpg" data-fancybox="group-1" class="fancybox"><img src="i/b-3-img-3.jpg"></a>
 				</div>
 			</div>
-			<ul class="b-6-list">
+			<ul class="b-3-list">
 				<li>
 					<div class="li-image"><img src="i/b-6-1.png"></div>
 					<span>Участие в аттестациях и соревнованиях</span>
@@ -301,13 +247,13 @@
 		</div>
 	</div>
 
-	<div class="b b-7">
+	<div class="b b-4">
 		<div class="b-block">
 			<h2 class="title"><span class="hashtag">#</span> <span>TigerKidsTomsk</span> - подписывайтесь, оставляйте отзывы</h2>
 		</div>
 	</div>
 
-	<div class="b b-8">
+	<div class="b b-5">
 		<div class="b-block">
 			<ul class="social-list-1">
 				<li class="li-vk">
@@ -372,7 +318,7 @@
 					<span><a href="#">Контакты</a></span>
 				</li>
 				<li>
-					<span><a href="disciplines.html">Дисциплины:</a></span>
+					<span><a href="#">Дисциплины:</a></span>
 					<span><a href="#">Джиу Джитсу</a></span>
 					<span><a href="#">Кудо</a></span>
 				</li>
