--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<li class="li-drop">
 						<a href="disciplines.html">Дисциплины</a>
 						<div class="nav-drop">
-							<div class="drop-item"><a href="#"><nobr>Джиу Джитсу</nobr></a></div>
-							<div class="drop-item"><a href="#">Кудо</a></div>
+							<div class="drop-item"><a href="disciplines-more.html"><nobr>Джиу Джитсу</nobr></a></div>
+							<div class="drop-item"><a href="disciplines-more.html">Кудо</a></div>
 						</div>
 					</li>
 					<li><a href="#">Цены</a></li>
@@ -83,8 +83,8 @@
 						<li class="li-drop">
 							<a href="disciplines.html">Дисциплины</a>
 							<div class="nav-drop">
-								<div class="drop-item"><a href="#">Джиу Джитсу</a></div>
-								<div class="drop-item"><a href="#">Кудо</a></div>
+								<div class="drop-item"><a href="disciplines-more.html">Джиу Джитсу</a></div>
+								<div class="drop-item"><a href="disciplines-more.html">Кудо</a></div>
 							</div>
 						</li>
 						<li><a href="#">Цены</a></li>
@@ -373,8 +373,8 @@
 				</li>
 				<li>
 					<span><a href="disciplines.html">Дисциплины:</a></span>
-					<span><a href="#">Джиу Джитсу</a></span>
-					<span><a href="#">Кудо</a></span>
+					<span><a href="disciplines-more.html">Джиу Джитсу</a></span>
+					<span><a href="disciplines-more.html">Кудо</a></span>
 				</li>
 				<li class="big">
 					<span><a href="#">Информация школы:</a></span>
