--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							<div class="drop-item"><a href="disciplines-more.html">Кудо</a></div>
 						</div>
 					</li>
-					<li><a href="#">Цены</a></li>
-					<li><a href="#">Акции</a></li>
+					<li><a href="price.html">Цены</a></li>
+					<li><a href="stock.html">Акции</a></li>
 					<li><a href="#">Отзывы</a></li>
 					<li><a href="#">Новости</a></li>
 					<li class="li-drop">
@@ -87,8 +87,8 @@
 								<div class="drop-item"><a href="disciplines-more.html">Кудо</a></div>
 							</div>
 						</li>
-						<li><a href="#">Цены</a></li>
-						<li><a href="#">Акции</a></li>
+						<li><a href="price.html">Цены</a></li>
+						<li><a href="stock.html">Акции</a></li>
 						<li><a href="#">Отзывы</a></li>
 						<li><a href="#">Новости</a></li>
 						<li class="li-drop">
@@ -363,8 +363,8 @@
 			<ul class="footer-nav">
 				<li>
 					<span><a href="index.html">Главная</a></span>
-					<span><a href="#">Цены</a></span>
-					<span><a href="#">Акции</a></span>
+					<span><a href="price.html">Цены</a></span>
+					<span><a href="stock.html">Акции</a></span>
 				</li>
 				<li>
 					<span><a href="#">Отзывы</a></span>
