--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
 					</li>
 					<li><a href="price.html">Цены</a></li>
 					<li><a href="stock.html">Акции</a></li>
-					<li><a href="#">Отзывы</a></li>
-					<li><a href="#">Новости</a></li>
+					<li><a href="reviews.html">Отзывы</a></li>
+					<li><a href="news.html">Новости</a></li>
 					<li class="li-drop">
 						<a href="#">Информация</a>
 						<div class="nav-drop">
-							<div class="drop-item"><a href="#">О школе</a></div>
-							<div class="drop-item"><a href="#">Тренеры</a></div>
-							<div class="drop-item"><a href="#">Достижения</a></div>
+							<div class="drop-item"><a href="about.html">О школе</a></div>
+							<div class="drop-item"><a href="treners.html">Тренеры</a></div>
+							<div class="drop-item"><a href="achives.html">Достижения</a></div>
 							<div class="drop-item"><a href="#">Фотогалерея</a></div>
 							<div class="drop-item"><a href="#">Видео</a></div>
-							<div class="drop-item"><a href="#">Расписание</a></div>
+							<div class="drop-item"><a href="schedule.html">Расписание</a></div>
 							<div class="drop-item"><a href="#">Вакансии</a></div>
 							<div class="drop-item"><a href="#">Методика</a></div>
 						</div>
 					</li>
-					<li><a href="#">Контакты</a></li>
-					<li><a href="#" class="header-btn">Бесплатное занятие</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+					<li><a href="#" class="header-btn fancybox">Бесплатное занятие</a></li>
 				</ul>
 			</div>
 			<div class="mobile-btn">
@@ -89,22 +89,22 @@
 						</li>
 						<li><a href="price.html">Цены</a></li>
 						<li><a href="stock.html">Акции</a></li>
-						<li><a href="#">Отзывы</a></li>
-						<li><a href="#">Новости</a></li>
+						<li><a href="reviews.html">Отзывы</a></li>
+						<li><a href="news.html">Новости</a></li>
 						<li class="li-drop">
 							<a href="#">Информация</a>
 							<div class="nav-drop">
-								<div class="drop-item"><a href="#">О школе</a></div>
-								<div class="drop-item"><a href="#">Тренеры</a></div>
-								<div class="drop-item"><a href="#">Достижения</a></div>
+								<div class="drop-item"><a href="about.html">О школе</a></div>
+								<div class="drop-item"><a href="treners.html">Тренеры</a></div>
+								<div class="drop-item"><a href="achives.html">Достижения</a></div>
 								<div class="drop-item"><a href="#">Фотогалерея</a></div>
 								<div class="drop-item"><a href="#">Видео</a></div>
-								<div class="drop-item"><a href="#">Расписание</a></div>
+								<div class="drop-item"><a href="schedule.html">Расписание</a></div>
 								<div class="drop-item"><a href="#">Вакансии</a></div>
 								<div class="drop-item"><a href="#">Методика</a></div>
 							</div>
 						</li>
-						<li><a href="#">Контакты</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
 						<li><a href="#" class="header-btn">Бесплатное занятие</a></li>
 					</ul>
 				</div>
@@ -123,7 +123,7 @@
 		<div class="b-block">
 			<h1>Запишите ребенка в детскую школу единоборств</h1>
 			<p>с профессиональным уклоном<br> обучения детей от 3 до 6 лет</p>
-			<a href="#" class="b-1-btn">Записаться на бесплатное занятие</a>
+			<a href="#popup-3" class="b-1-btn fancybox">Записаться на бесплатное занятие</a>
 		</div>
 	</div>
 
@@ -367,9 +367,9 @@
 					<span><a href="stock.html">Акции</a></span>
 				</li>
 				<li>
-					<span><a href="#">Отзывы</a></span>
-					<span><a href="#">Новости</a></span>
-					<span><a href="#">Контакты</a></span>
+					<span><a href="reviews.html">Отзывы</a></span>
+					<span><a href="news.html">Новости</a></span>
+					<span><a href="contacts.html">Контакты</a></span>
 				</li>
 				<li>
 					<span><a href="disciplines.html">Дисциплины:</a></span>
@@ -380,15 +380,15 @@
 					<span><a href="#">Информация школы:</a></span>
 					<div>
 						<div class="left-part">
-							<span><a href="#">о школе</a></span>
-							<span><a href="#">тренеры</a></span>
+							<span><a href="about.html">о школе</a></span>
+							<span><a href="treners.html">тренеры</a></span>
 							<span><a href="#">фотогалерея</a></span>
 							<span><a href="#">вакансии</a></span>
 						</div>
 						<div class="right-part">
 							<span><a href="#">видеогалерея</a></span>
-							<span><a href="#">расписание</a></span>
-							<span><a href="#">наши достижения</a></span>
+							<span><a href="schedule.html">расписание</a></span>
+							<span><a href="achives.html">наши достижения</a></span>
 							<span><a href="#">о методике</a></span>
 						</div>
 					</div>
@@ -401,6 +401,69 @@
 	</div>
 
 	<div style="display:none;">
+		<div class="popup" id="popup-1">
+			<div class="popup-name">хотите убедиться в качестве тренировок</div>
+			<div class="popup-subname">Запишитесь на бесплатное пробное занятие</div>
+			<ul class="popup-list">
+				<li><img src="i/p-i-1.png">Тренировка в действующей группе</li>
+				<li><img src="i/p-i-2.png">Длительность тренировки 55 минут</li>
+			</ul>
+			<form>
+				<div class="select-wrap">
+					<div class="select-area">
+						<span></span>
+					</div>
+					<div class="select-drop"></div>
+					<select>
+						<option class="value-1" value="m" selected>Муж.</option>
+						<option class="value-2" value="w">Жен.</option>
+					</select>
+				</div>
+				<div class="select-wrap">
+					<div class="select-area">
+						<span></span>
+					</div>
+					<div class="select-drop"></div>
+					<select>
+						<option class="value-1" value="3" selected>3</option>
+						<option class="value-2" value="4">4</option>
+						<option class="value-3" value="5">5</option>
+						<option class="value-4" value="6">6</option>
+					</select>
+				</div>
+				<input type="text" placeholder="Имя ребёнка" class="required">
+				<input type="tel" placeholder="Ваш номер телефона" class="required">
+				<input type="text" placeholder="Ваше имя" class="required">
+				<button type="submit">Записаться на бесплатное занятие</button>
+				<div class="button-text"><div class="radio-btn active"></div>отправляя заявку, вы соглашаетесь<br> с <a href="#" target="_blank">политикой конфиденциальности</a></div>
+			</form>
+		</div>
+
+		<div class="popup" id="popup-2">
+			<div class="popup-name">Заголовок</div>
+			<div class="popup-subname">Подзаголовок</div>
+			<form>
+				<input type="tel" placeholder="Ваш номер телефона" class="required">
+				<input type="text" placeholder="Ваше имя" class="required">
+				<button type="submit">Записаться на бесплатное занятие</button>
+				<div class="button-text"><div class="radio-btn active"></div>отправляя заявку, вы соглашаетесь<br> с <a href="#" target="_blank">политикой конфиденциальности</a></div>
+			</form>
+		</div>
+
+		<div class="popup" id="popup-3">
+			<div class="popup-name">Заголовок</div>
+			<div class="popup-subname">Подзаголовок</div>
+			<form>
+				<div class="file-wrap">
+					<div class="file-inp">Прикрепить резюме</div>
+					<input type="file" class="hide-input">
+				</div>
+				<input type="tel" placeholder="Ваш номер телефона" class="required">
+				<input type="text" placeholder="Ваше имя" class="required">
+				<button type="submit">Записаться на бесплатное занятие</button>
+				<div class="button-text"><div class="radio-btn active"></div>отправляя заявку, вы соглашаетесь<br> с <a href="#" target="_blank">политикой конфиденциальности</a></div>
+			</form>
+		</div>
 	</div>
 </body>
 </html>
