--- a/disciplines-more.html
+++ b/disciplines-more.html
@@ -224,7 +224,7 @@
 						<div class="li-wrap">
 							<div class="li-name">Панов Николай Сергеевич</div>
 							<img src="i/trener.jpg" class="abs-img">
-							<div class="li-profile">направление: Джиу Джитсу</div>
+							<div class="li-profile"><span>направление:</span> Джиу Джитсу</div>
 							<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra. Синий пояс (7 кю) по традиционному джиу джитсу. Участник многих социальных проектов Томска и Томской области по пропоганде ЗОЖ и популяризации спорта. Вожатый и спортивный инструктор в детских лагерях. Тренер по функциональному тренингу в сборной команде по спортивной аэробике ШВСМ Томск. Образование: Томский государственный педагогический университет, специалист по физической культуре и спорту. Магистрант ТГПУ.</p>
 							<a href="#" class="b-6-btn">Записаться на бесплатное занятие</a>
 						</div>
