--- a/index.html
+++ b/index.html
@@ -120,10 +120,21 @@
 	</div>
 
 	<div class="b b-1">
-		<div class="b-block">
-			<h1>Запишите ребенка в детскую школу единоборств</h1>
-			<p>с профессиональным уклоном<br> обучения детей от 3 до 6 лет</p>
-			<a href="#popup-3" class="b-1-btn fancybox">Записаться на бесплатное занятие</a>
+		<div class="b-1-slider clearfix">
+			<div class="b-1-slide">
+				<div class="b-block">
+					<h2>Запишите ребенка в детскую школу единоборств</h2>
+					<p>с профессиональным уклоном<br> обучения детей от 3 до 6 лет</p>
+					<a href="#popup-3" class="b-1-btn fancybox">Записаться на бесплатное занятие</a>
+				</div>
+			</div>
+			<div class="b-1-slide">
+				<div class="b-block">
+					<h2>Запишите ребенка в детскую школу единоборств</h2>
+					<p>с профессиональным уклоном<br> обучения детей от 3 до 6 лет</p>
+					<a href="#popup-3" class="b-1-btn fancybox">Записаться на бесплатное занятие</a>
+				</div>
+			</div>
 		</div>
 	</div>
 
