--- a/news-more.html
+++ b/news-more.html
@@ -130,9 +130,12 @@
 	<div class="b b-2">
 		<div class="b-block">
 			<div class="b-2-wrap">
-				<img src="i/news-more-img.jpg">
-				<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
 				<iframe src="https://www.youtube.com/embed/x_9whF11T74" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
+				<div class="b-2-img">
+					<img src="i/news-more-img.jpg">
+					<span>Освоение новой методики растяжки прошло успешно, дети наблюдают прогресс</span>
+				</div>
 				<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
 				<div class="b-2-fix">
 					<div class="name">Хотите убедиться в качестве тренировок?</div>
@@ -152,9 +155,9 @@
 				<div class="news-share-btn"><span>Скопировать</span></div>
 			</div>
 			<!-- uSocial -->
-<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
-<div class="uSocial-Share" data-pid="a27b9576a41f320fd05a9b80276217fb" data-type="share" data-options="rect,style1,default,absolute,horizontal,size48,eachCounter0,counter0,nomobile" data-social="vk,fb,twi,pinterest"></div>
-<!-- /uSocial -->
+				<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
+				<div class="uSocial-Share" data-pid="58e53511aac1dc127512fabcf85af617" data-type="share" data-options="round-rect,style1,default,absolute,horizontal,size48,eachCounter1,counter0" data-social="fb,twi,vk,gPlus" data-mobile="vi,wa,sms"></div>
+			<!-- /uSocial -->
 		</div>
 	</div>
 
