--- a/news.html
+++ b/news.html
@@ -131,14 +131,14 @@
 			<ul class="news-list">
 				<li>
 					<div class="news-title">Заголовок новости</div>
-					<img src="i/news-img.jpg" class="abs-img">
+					<a href="news-more.html" class="abs-img"><img src="i/news-img.jpg"></a>
 					<div class="date">16.06.2018</div>
 					<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
 					<a href="#" class="b-2-btn">Читать подробнее</a>
 				</li>
 				<li>
 					<div class="news-title">Заголовок новости</div>
-					<img src="i/news-img.jpg" class="abs-img">
+					<a href="news-more.html" class="abs-img"><img src="i/news-img.jpg"></a>
 					<div class="date">16.06.2018</div>
 					<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
 					<a href="#" class="b-2-btn">Читать подробнее</a>
