--- a/achives.html
+++ b/achives.html
@@ -129,7 +129,10 @@
 	<div class="b b-2">
 		<div class="b-block">
 			<div class="b-2-wrap">
-				<img src="i/news-more-img.jpg">
+				<div class="b-2-img">
+					<img src="i/news-more-img.jpg">
+					<span>Освоение новой методики растяжки прошло успешно, дети наблюдают прогресс</span>
+				</div>
 				<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
 				<iframe src="https://www.youtube.com/embed/x_9whF11T74" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
