--- a/disciplines.html
+++ b/disciplines.html
@@ -257,6 +257,10 @@
 		<div class="b-block">
 			<ul class="social-list-1">
 				<li class="li-vk">
+					<div class="vk-top clearfix">
+						<a href="#" class="vk-a left"><img src="i/vk-icon.png"></a>
+						<a href="#" class="subscribe-a right">Подписаться</a>
+					</div>
 					<script type="text/javascript" src="https://vk.com/js/api/openapi.js?159"></script>
 
 					<!-- VK Widget -->
@@ -266,11 +270,15 @@
 					</script>
 				</li>
 				<li class="li-inst">
+					<div class="inst-top clearfix">
+						<a href="#" class="inst-a left"><img src="i/inst-icon.png"></a>
+						<a href="#" class="subscribe-a right">Подписаться</a>
+					</div>
 					<div class="instagram-desktop">
-						<iframe src="https://widget.instagramm.ru/?imageW=3&imageH=3&thumbnail_size=104&type=0&typetext=tigerkidstomsk&head_show=1&profile_show=1&shadow_show=1&bg=255,255,255,1&opacity=true&head_bg=46729b&subscribe_bg=ad4141&border_color=c3c3c3&head_title=" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:350px;height:487px;"></iframe>
+						<iframe src="https://widget.instagramm.ru/?imageW=3&imageH=3&thumbnail_size=104&type=0&typetext=tigerkidstomsk&head_show=0&profile_show=0&shadow_show=0&bg=255,255,255,1&opacity=true&head_bg=46729b&subscribe_bg=ad4141&border_color=c3c3c3&head_title=" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:350px;height:367px;"></iframe>
 					</div>
 					<div class="instagram-mobile">
-						<iframe src="https://widget.instagramm.ru/?imageW=3&imageH=3&thumbnail_size=74&type=0&typetext=tigerkidstomsk&head_show=1&profile_show=1&shadow_show=1&bg=255,255,255,1&opacity=true&head_bg=46729b&subscribe_bg=ad4141&border_color=c3c3c3&head_title=" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:260px;height:397px;"></iframe>
+						<iframe src="https://widget.instagramm.ru/?imageW=3&imageH=3&thumbnail_size=74&type=0&typetext=tigerkidstomsk&head_show=0&profile_show=0&shadow_show=0&bg=255,255,255,1&opacity=true&head_bg=46729b&subscribe_bg=ad4141&border_color=c3c3c3&head_title=" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:260px;height:277px;"></iframe>
 					</div>
 				</li>
 				<li class="li-youtube">
